





import java.util.List;
import java.util.ArrayList;

public class Event_Log  {

    private String attribute;



    public Event_Log(
        String attribute    ) {
        this.attribute = attribute;
    }


    public String getAttribute() {
        return attribute;
    }

    public void setAttribute(String attribute) {
        this.attribute = attribute;
    }


}