





import java.util.List;
import java.util.ArrayList;

public class Light_Sensor  {

    private String attribute;



    public Light_Sensor(
        String attribute    ) {
        this.attribute = attribute;
    }


    public String getAttribute() {
        return attribute;
    }

    public void setAttribute(String attribute) {
        this.attribute = attribute;
    }


}