





import java.util.List;
import java.util.ArrayList;

public class Lock_doors_sensors  {

    private String attribute;



    public Lock_doors_sensors(
        String attribute    ) {
        this.attribute = attribute;
    }


    public String getAttribute() {
        return attribute;
    }

    public void setAttribute(String attribute) {
        this.attribute = attribute;
    }


}