





import java.util.List;
import java.util.ArrayList;

public class Server  {

    private String attribute;



    public Server(
        String attribute    ) {
        this.attribute = attribute;
    }


    public String getAttribute() {
        return attribute;
    }

    public void setAttribute(String attribute) {
        this.attribute = attribute;
    }


}