





import java.util.List;
import java.util.ArrayList;

public class Temperature_sensor  {

    private String attribute;



    public Temperature_sensor(
        String attribute    ) {
        this.attribute = attribute;
    }


    public String getAttribute() {
        return attribute;
    }

    public void setAttribute(String attribute) {
        this.attribute = attribute;
    }


}